create header foundation code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Snippets</title>
 </head>
 <body>
+    <header>
+        <div class="logo"><h1>Project Snippets</h1></div>
+    </header>
     
     <script src="scripts/script.js"></script>
 </body>
