create footer foundation code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <div class="logo"><h1>Project Snippets</h1></div>
     </header>
     
+    <footer>
+        <p>All rights reserved © Priya Menezes 2024</p>
+    </footer>
     <script src="scripts/script.js"></script>
 </body>
 </html>
