create space for main content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header>
         <div class="logo"><h1>Project Snippets</h1></div>
     </header>
-    
+    <main>
+        Main Body
+    </main>
     <footer>
         <p>All rights reserved © Priya Menezes 2024</p>
     </footer>
