--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><h1>Project Snippets</h1></div>
+        <div class="container"><h1>Project Snippets</h1></div>
     </header>
     <main>
         Main Body
