--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         Main Body
     </main>
     <footer>
-        <p>All rights reserved © Priya Menezes 2024</p>
+        <div class="container"><p>All rights reserved © Priya Menezes 2024</p></div>
     </footer>
     <script src="scripts/script.js"></script>
 </body>
