add foundation code to all pages

--- a/pages/craft.html
+++ b/pages/craft.html
@@ -7,6 +7,15 @@
     <title>Craft</title>
 </head>
 <body>
+    <header>
+        <div class="container"><h1>Project Snippets</h1></div>
+    </header>
+    <main>
+        Main Body
+    </main>
+    <footer>
+        <div class="container"><p>All rights reserved © Priya Menezes 2024</p></div>
+    </footer>
     
     <script src="../scripts/script.js"></script>
 </body>
