style and connect pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header>
-        <div class="container"><h1>Project Snippets</h1></div>
+        <div class="container">
+            <a href="#"><h1>Project Snippets</h1></a>
+            <nav>
+                <a href="/pages/code.html">Code</a>
+                <a href="/pages/design.html">Design</a>
+                <a href="/pages/illustration.html">Illustration</a>
+                <a href="/pages/write.html">Write</a>
+                <a href="/pages/craft.html">Craft</a>
+            </nav>
+        </di>
     </header>
     <main>
         Main Body
