--- a/pages/code.html
+++ b/pages/code.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header>
-        <div class="container"><h1>Project Snippets</h1></div>
+        <div class="container">
+            <a href="../index.html"><h1>Project Snippets</h1></a>
+            <nav>
+                <a href="code.html">Code</a>
+                <a href="design.html">Design</a>
+                <a href="illustration.html">Illustration</a>
+                <a href="write.html">Write</a>
+                <a href="craft.html">Craft</a>
+            </nav>
+        </div>
     </header>
     <main>
         Main Body
