add coming soon message

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </di>
     </header>
     <main>
-        Main Body
+        <p>Home body coming soon</p>
     </main>
     <footer>
         <div class="container"><p>All rights reserved © Priya Menezes 2024</p></div>
