--- a/pages/code.html
+++ b/pages/code.html
@@ -20,7 +20,9 @@
         </div>
     </header>
     <main>
-        Main Body
+        <div class="container">
+            <p>Code snippets coming soon</p>
+        </div>
     </main>
     <footer>
         <div class="container"><p>All rights reserved © Priya Menezes 2024</p></div>
