--- a/pages/write.html
+++ b/pages/write.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <main>
-        Main Body
+        <p>Write snippets coming soon</p>
     </main>
     <footer>
         <div class="container"><p>All rights reserved © Priya Menezes 2024</p></div>
