--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </di>
     </header>
     <main>
+        <div class="container">
         <p>Home body coming soon</p>
+    </div>
     </main>
     <footer>
         <div class="container"><p>All rights reserved © Priya Menezes 2024</p></div>
