--- a/pages/write.html
+++ b/pages/write.html
@@ -20,7 +20,9 @@
         </div>
     </header>
     <main>
+        <div class="container">
         <p>Write snippets coming soon</p>
+        </div>
     </main>
     <footer>
         <div class="container"><p>All rights reserved © Priya Menezes 2024</p></div>
